--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -52,6 +52,14 @@
             <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Die Adresse darf
                 nicht leer sein.</p>
         </div>
+        
+        <div class="field">
+            <label for="email">E-Mail Adresse</label>
+            <input id="email" name="email" th:field="*{email}" th:errorclass="fieldError" type="email" required="required"/><br/>
+            <div class="ui negative message" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
+                <p>Die E-Mail darf nicht leer sein.</p>
+            </div>
+        </div>
 
         <button type="submit" class="ui button" th:text="#{register.submit}">Registrieren</button>
     </form>
